--- a/webbplats.html
+++ b/webbplats.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang = "sv">
-
 <head>
     <title>egen webbplats</title>
     <meta charset = "UTF-8">
-    <link href= "webbplats.css" rel="styleshett">
+    <link href= "webbplats.css" rel="stylesheet">
 </head>
 <body>
     <div class=" wrapper">
         <header>
-            <h1>Dijar är en människa!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
+            <h1>Real Madrid</h1>
         </header>
         <nav>
             <u1>
-                <li><a hreaf="Twknikum.se">Teknikum</a></li>
+                <li><a hreaf="Rea Madrid">Rea Madrid</a></li>
                 
             </u1>
         </nav>
