--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </header>
         <nav>
             <u1>
-                <li><a hreaf="Rea Madrid">Rea Madrid</a></li>
+                <li><a hreaf="index2.html">Startsida</a></li> 
                 
             </u1>
         </nav>
