--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
             <h1>Real Madrid</h1>
         </header>
         <nav>
-            <u1>
-                <li><a hreaf="index2.html">Startsida</a></li> 
-                
-            </u1>
+            <ul>
+                <li><a href="index.html">Startsida</a></li> 
+                <li><a href="index2.html">Tabellen</a></li> 
+                <li><a href="index3.html">Almänfakta</a></li>   
+            </ul>
         </nav>
+        <main>
+            <section>
+                <p>Här ska jag berätta lite almänt fakta om mig själv</p>
+            </section>
+            <section>
+                <p>Här ska jag berätta om mig själv</p>
+            </section>
+        </main>
+        <footer>
+            <p>Te22A</p>
+        </footer>
     </div>
 </body>
 </html>
