--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,17 @@
     <link href="webbplats.css" rel="stylesheet">
 </head>
 <body>
+    <div class=" wrapper">
+        <header>
+            <h1>Real Madrid</h1>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Startsida</a></li> 
+                <li><a href="index2.html">Tabellen</a></li> 
+                <li><a href="index3.html">Almänfakta</a></li>   
+            </ul>
+        </nav>
     <table>
         <caption>Real Madrid</caption>
         <thead>
@@ -14,7 +25,7 @@
                 <th>Champions</th>
                 <th>La Liga</th>
                 <th>Värdesmästare</th>
-                <th></th>
+                <th>Copa de real</th>
             </tr>
         </thead>
         <tbody>
@@ -45,6 +56,13 @@
                 <td>X</td>
                 <td>X</td>
                 <td></td>
+            </tr>
+            <tr>
+                <td>2022</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
             </tr>
         </tbody>
     </table>
