--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 <body>
     <div class=" wrapper">
         <header>
-            <h1>Real Madrid</h1>
+            <h1>Min egen webbplats</h1>
         </header>
         <nav>
             <ul>
-                <li><a href="index.html">Startsida</a></li> 
-                <li><a href="index2.html">Tabellen</a></li> 
-                <li><a href="index3.html">Almänfakta</a></li>   
+                <li><a href="index.html">Om Mig Själv</a></li> 
+                <li><a href="index2.html">Real Madrid</a></li> 
+                <li><a href="index3.html">Syrein</a></li>   
             </ul>
         </nav>
         <main>
             <section>
-                <p>Här ska jag berätta lite almänt fakta om mig själv</p>
+                <h2>Vem är jag?</h2>
+                <h3>Hej</h3>
+                <p>Jag heter younis Hamrh och är 17 år gammal</p>
             </section>
             <section>
                 <p>Här ska jag berätta om mig själv</p>
             </section>
         </main>
         <footer>
-            <p>Te22A</p>
+            <p>Younis Hamrh</p>
         </footer>
     </div>
 </body>
