--- a/index2.html
+++ b/index2.html
@@ -1,70 +1,81 @@
-<!doctype html>
-<html lang="sv">
+<!DOCTYPE html>
+<html lang = "sv">
 <head>
     <title>egen webbplats</title>
     <meta charset = "UTF-8">
-    <link href="webbplats.css" rel="stylesheet">
+    <link href= "webbplats.css" rel="stylesheet">
 </head>
 <body>
     <div class=" wrapper">
         <header>
-            <h1>Real Madrid</h1>
+            <h1>Min egen webbplats</h1>
         </header>
         <nav>
             <ul>
-                <li><a href="index.html">Startsida</a></li> 
-                <li><a href="index2.html">Tabellen</a></li> 
-                <li><a href="index3.html">Almänfakta</a></li>   
+                <li><a href="index.html">Om Mig Själv</a></li> 
+                <li><a href="index2.html">Real Madrid</a></li> 
+                <li><a href="index3.html">Syrein</a></li>   
             </ul>
         </nav>
-    <table>
-        <caption>Real Madrid</caption>
-        <thead>
-            <tr>
-                <th>År</th>
-                <th>Champions</th>
-                <th>La Liga</th>
-                <th>Värdesmästare</th>
-                <th>Copa de real</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2018</td>
-                <td>X</td>
-                <td>X</td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>2019</td>
-                <td>X</td>
-                <td></td>
-                <td>x</td>
-                <td>x</td>
-            </tr>
-            <tr>
-                <td>2020</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>X</td>
-            </tr>
-            <tr>
-                <td>2021</td>
-                <td></td>
-                <td>X</td>
-                <td>X</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>2022</td>
-                <td>X</td>
-                <td>X</td>
-                <td>X</td>
-                <td>X</td>
-            </tr>
-        </tbody>
-    </table>
+        <main>
+            <section>
+                <p class="altP">
+                <img src="https://www.realmadrid.com/StaticFiles/RealMadridResponsive/images/static/og-image.png" alt="Real Madrid logga">  
+                </p>   
+            </section></section>
+            <table>
+                <caption>Real Madrid</caption>
+                <thead>
+                    <tr>
+                        <th>År</th>
+                        <th>Champions</th>
+                        <th>La Liga</th>
+                        <th>Värdesmästare</th>
+                        <th>Copa de real</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2018</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>2019</td>
+                        <td>X</td>
+                        <td></td>
+                        <td>x</td>
+                        <td>x</td>
+                    </tr>
+                    <tr>
+                        <td>2020</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>X</td>
+                    </tr>
+                    <tr>
+                        <td>2021</td>
+                        <td></td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>2022</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>X</td>
+                        <td>X</td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
+        <footer>
+            <p>Younis Hamrh</p>
+        </footer>
+    </div>
 </body>
 </html>
