--- a/index3.html
+++ b/index3.html
@@ -8,13 +8,13 @@
 <body>
     <div class=" wrapper">
         <header>
-            <h1>Real Madrid</h1>
+            <h1>Min egen webbplats</h1>
         </header>
         <nav>
             <ul>
-                <li><a href="index.html">Startsida</a></li> 
-                <li><a href="index2.html">Tabellen</a></li> 
-                <li><a href="index3.html">Almänfakta</a></li>   
+                <li><a href="index.html">Om mig själv</a></li> 
+                <li><a href="index2.html">Real madrid</a></li> 
+                <li><a href="index3.html">Syrein</a></li>   
             </ul>
         </nav>
     </div>
