fotsätter ned min sida
lektion 6

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
             <section>
                 <h2>Vem är jag?</h2>
                 <h3>Hej</h3>
-                <p>Jag heter younis Hamrh och är 17 år gammal</p>
-            </section>
-            <section>
-                <p>Här ska jag berätta om mig själv</p>
+                <p>Jag heter younis Hamrh och är 17 år gammal.</p>
+                <p>Jag kommer från Syrein från huvedstaden Damaskus, men jag bor här i Sverige.</p>
+                <p>Här gör jag min egen webbsida där jag ska berätta om mig själv om min favorit sport som är fotboll och min favorit lag som är Real Madrid och ska även berätta om mit hemland.</p>
             </section>
         </main>
         <footer>
