--- a/index3.html
+++ b/index3.html
@@ -17,6 +17,46 @@
                 <li><a href="index3.html">Syrein</a></li>   
             </ul>
         </nav>
+        <main>
+            <section>
+                <ul>
+                    <h4>Almän fakta om Syrein</h4>
+                    <li>Syrien är ett land i Mellanöstern i sydvästra Asien.</li>
+                    <li> Damaskus är huvedstaden.</li>
+                    <li>Arabiska är det officiella språket i Syrien.</li>
+                    <li>Islam är den dominerande religionen i Syrien men finns öven kristna.</li>
+                    <li>Syrein blev självstendigt 1946</li>
+                    <p class="altP">
+                        <img src="https://www.nupi.no/var/nupi/storage/images/media/images/artikkelfoto/kart-syria-region/883420-1-nor-NO/Kart-Syria-region_editor_artikkel.png" alt="Syreins kart-syria-region">  
+                        </p>  
+                </ul>
+                <ul>
+                    <h5>Syriens flagga</h5>
+                    <li>Syriens flagga består av tre horisontella ränder med följande färger från topp till botten:</li>
+                    <li>Röd: Den översta randen är röd och representerar det blod som offrades av dem som kämpade för självständighet och frihet.</li>
+                    <li>Vit: Mittenranden är vit och symboliserar en framtid av fred och stabilitet.</li>
+                    <li>Svart: Den nedersta randen är svart och representerar Syriens folk.</li>
+                    <p class="altp">
+                        <img src="https://tse2.mm.bing.net/th?id=OIP.dk0c9JJ9Ofq543EKWTpJ8gHaEo&pid=Api&P=0&h=180" alt="Syreins flagga"> alt="Damaskus">
+                    </p>
+                </ul>
+            </section>
+            <section>
+                <ul>
+                    <h5>Kända städer i Syrien</h5>
+                    <h6>Damaskus</h6>
+                    <li>Damaskusk är huvudstaten Syrein.</li>
+                    <li>En av de äldsta städerna i världen.</li>
+                    <li>Staden ligger i sydvästra Syrien.</li>
+                    <p class="altp">
+                        <img src="https://r.search.yahoo.com/_ylt=AwrFErOetjplKg0BW9lmEYpQ;_ylu=c2VjA3NyBHNsawNpbWcEb2lkAzJkOWVjZWQ2NWFmMTYxYWRlMWQ4NzY5Y2FmNzg1NjgyBGdwb3MDOQRpdANiaW5n/RV=2/RE=1698375454/RO=11/RU=http%3a%2f%2fcommons.wikimedia.org%2fwiki%2fFile%3aUmayyad_Mosque%2c_Damascus.jpg/RK=2/RS=EdIMFriDaa_uO_Yk1FEpPYGTs8Q-" alt="Damaskus">
+                    </p>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <p>Younis Hamrh</p>
+        </footer>
     </div>
 </body>   
 </html>
