--- a/index3.html
+++ b/index3.html
@@ -26,7 +26,7 @@
                     <li>Arabiska är det officiella språket i Syrien.</li>
                     <li>Islam är den dominerande religionen i Syrien men finns öven kristna.</li>
                     <li>Syrein blev självstendigt 1946</li>
-                    <p class="altP">
+                    <p class="p2">
                         <img src="https://www.nupi.no/var/nupi/storage/images/media/images/artikkelfoto/kart-syria-region/883420-1-nor-NO/Kart-Syria-region_editor_artikkel.png" alt="Syreins kart-syria-region">  
                         </p>  
                 </ul>
@@ -36,20 +36,19 @@
                     <li>Röd: Den översta randen är röd och representerar det blod som offrades av dem som kämpade för självständighet och frihet.</li>
                     <li>Vit: Mittenranden är vit och symboliserar en framtid av fred och stabilitet.</li>
                     <li>Svart: Den nedersta randen är svart och representerar Syriens folk.</li>
-                    <p class="altp">
-                        <img src="https://tse2.mm.bing.net/th?id=OIP.dk0c9JJ9Ofq543EKWTpJ8gHaEo&pid=Api&P=0&h=180" alt="Syreins flagga"> alt="Damaskus">
+                    <p class="p3"> 
+                        <img src="https://tse2.mm.bing.net/th?id=OIP.dk0c9JJ9Ofq543EKWTpJ8gHaEo&pid=Api&P=0&h=180" alt="Syreins flagga">
                     </p>
                 </ul>
             </section>
             <section>
                 <ul>
-                    <h5>Kända städer i Syrien</h5>
                     <h6>Damaskus</h6>
                     <li>Damaskusk är huvudstaten Syrein.</li>
                     <li>En av de äldsta städerna i världen.</li>
                     <li>Staden ligger i sydvästra Syrien.</li>
-                    <p class="altp">
-                        <img src="https://r.search.yahoo.com/_ylt=AwrFErOetjplKg0BW9lmEYpQ;_ylu=c2VjA3NyBHNsawNpbWcEb2lkAzJkOWVjZWQ2NWFmMTYxYWRlMWQ4NzY5Y2FmNzg1NjgyBGdwb3MDOQRpdANiaW5n/RV=2/RE=1698375454/RO=11/RU=http%3a%2f%2fcommons.wikimedia.org%2fwiki%2fFile%3aUmayyad_Mosque%2c_Damascus.jpg/RK=2/RS=EdIMFriDaa_uO_Yk1FEpPYGTs8Q-" alt="Damaskus">
+                    <p class="p4">
+                        <img src="https://media.istockphoto.com/id/1146910984/sv/foto/damaskus-stadsbilden.jpg?s=612x612&w=0&k=20&c=s-ZsvtinN5OsrKPOFDVDN5taVuSk25Q3Jtnso0Rh0Ho=" alt="Damaskus">
                     </p>
                 </ul>
             </section>
