--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html>
-<html lang = "sv">
-<head>
-    <title>egen webbplats</title>
-    <meta charset = "UTF-8">
-    <link href= "webbplats.css" rel="stylesheet">
+<!DOCTYPE html> <!--HTML5 dokument-->
+<html lang = "sv"> <!--HTML öppning med speåket svenska-->
+<head> <!--Metadata-->
+    <title>egen webbplats</title> <!--Min sidas title namn-->
+    <meta charset = "UTF-8"> <!-- Användning av specialtecken-->
+    <link href= "webbplats.css" rel="stylesheet"> <!--Extern CSS-->
 </head>
-<body>
-    <div class=" wrapper">
-        <header>
-            <h1>Min egen webbplats</h1>
+<body id="index2"> <!--Inehållet för hemsidan-->
+    <div class=" wrapper"> <!--Container, grid layout-->
+        <header><!-- Min sidas huvud-->
+            <h1>Min egen webbplats</h1> <!-- En rubrik-->
         </header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Om Mig Själv</a></li> 
-                <li><a href="index2.html">Real Madrid</a></li> 
-                <li><a href="index3.html">Syrein</a></li>   
+        <nav> <!--Globala menyn-->
+            <ul> <!--Ordnad lista-->
+                <li><a href="index.html">Om Mig Själv</a></li> <!--Listelement, klikbar text till ett annat html dokument--> 
+                <li><a href="realmadrid.html">Real Madrid</a></li> 
+                <li><a href="syrien.html">Syrein</a></li>   
             </ul>
         </nav>
-        <main>
-            <section>
-                <h2>Vem är jag?</h2>
-                <h3>Hej</h3>
-                <p>Jag heter younis Hamrh och är 17 år gammal.</p>
+        <main> <!--Huvuinehåll-->
+            <section> <!--Avdelning-->
+                <h2>Vem är jag?</h2> <!--Huvudrubrik 2-->
+                <h3>Hej</h3> <!--Rubrik 3-->
+                <p>Jag heter younis Hamrh och är 17 år gammal.</p> <!--Stycke-->
                 <p>Jag kommer från Syrein från huvedstaden Damaskus, men jag bor här i Sverige.</p>
                 <p>Här gör jag min egen webbsida där jag ska berätta om mig själv om min favorit sport som är fotboll och min favorit lag som är Real Madrid och ska även berätta om mit hemland.</p>
             </section>
         </main>
-        <footer>
+        <footer> <!--Sidfot-->
             <p>Younis Hamrh</p>
         </footer>
     </div>
