--- a/syrien.html
+++ b/syrien.html
@@ -13,25 +13,25 @@
         <nav>
             <ul>
                 <li><a href="index.html">Om mig själv</a></li> 
-                <li><a href="index2.html">Real madrid</a></li> 
-                <li><a href="index3.html">Syrein</a></li>   
+                <li><a href="realmadrid.html">Real madrid</a></li> 
+                <li><a href="syrien.html">Syrein</a></li>   
             </ul>
         </nav>
         <main>
             <section>
                 <ul>
-                    <h4>Almän fakta om Syrein</h4>
-                    <li>Syrien är ett land i Mellanöstern i sydvästra Asien.</li>
+                    <h4>Almän fakta om Syrein</h4> <!-- huvudrubtik 4-->
+                    <li>Syrien är ett land i Mellanöstern i sydvästra Asien.</li> <!--listelement-->
                     <li> Damaskus är huvedstaden.</li>
                     <li>Arabiska är det officiella språket i Syrien.</li>
                     <li>Islam är den dominerande religionen i Syrien men finns öven kristna.</li>
                     <li>Syrein blev självstendigt 1946</li>
-                    <p class="p2">
+                    <p class="p2"> <!-- namn till denna bilden undet till CSS-->
                         <img src="https://www.nupi.no/var/nupi/storage/images/media/images/artikkelfoto/kart-syria-region/883420-1-nor-NO/Kart-Syria-region_editor_artikkel.png" alt="Syreins kart-syria-region">  
                         </p>  
                 </ul>
                 <ul>
-                    <h5>Syriens flagga</h5>
+                    <h4>Syriens flagga</h4>
                     <li>Syriens flagga består av tre horisontella ränder med följande färger från topp till botten:</li>
                     <li>Röd: Den översta randen är röd och representerar det blod som offrades av dem som kämpade för självständighet och frihet.</li>
                     <li>Vit: Mittenranden är vit och symboliserar en framtid av fred och stabilitet.</li>
@@ -43,7 +43,7 @@
             </section>
             <section>
                 <ul>
-                    <h6>Damaskus</h6>
+                    <h4>Damaskus</h4>
                     <li>Damaskusk är huvudstaten Syrein.</li>
                     <li>En av de äldsta städerna i världen.</li>
                     <li>Staden ligger i sydvästra Syrien.</li>
